test(config): include more events for test logs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
 test {
     testLogging {
-        events "failed"
+        events "passed", "failed", "skipped"
         exceptionFormat "full"
     }
 }
