refactor(test): Nest unit tests according to functions
Also:
- Use JUnit5 instead of Kotlin Test (I think that is what the change in build.gradle means.)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 }
 
 test {
+    useJUnitPlatform()
+
     testLogging {
         events "passed", "failed", "skipped"
         exceptionFormat "full"
